Refactor sentence generation logic and strategy interface.
Renamed methods in structure strategies to clarify purpose and improve readability. Simplified logic for generating sentences while enhancing configurability and placeholder handling. Removed outdated comments and improved logging for better traceability.